[FEAT] Added Bootstrap dashboard template
Created basic electron application and added bootstrap dashboard template.

--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "electron-quick-start",
-  "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "name": "spacing_app",
+  "version": "0.0.1",
+  "description": "This app computes available seating in a cinema. Depending on the occupancy",
   "main": "main.js",
-  "scripts": {
-    "start": "electron ."
+  "directories": {
+    "doc": "docs"
   },
-  "repository": "https://github.com/electron/electron-quick-start",
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "dependencies": {},
   "devDependencies": {
     "electron": "^10.1.0"
-  }
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron ."
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lemontyc/mtyhack2020_aladix.git"
+  },
+  "keywords": [
+    "cinema",
+    "spacing",
+    "calculator"
+  ],
+  "author": "Luis M. - Ivan Ochoa - Alejandro Lopez",
+  "license": "SEE LICENSE IN LICENSE",
+  "bugs": {
+    "url": "https://github.com/lemontyc/mtyhack2020_aladix/issues"
+  },
+  "homepage": "https://github.com/lemontyc/mtyhack2020_aladix#readme"
 }
