--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "electron-db": "^0.15.7",
     "jwt-decode": "^2.2.0",
     "keytar": "^6.0.1"
   },
